# ecs

./: .gitignore  LICENSE  README.md
.github/workflows/: main.yml
ecs/: CMakeLists.txt  package.xml  setup.py
ecs/config/: parameters.yaml  parameters_nn.yaml  rba_test_params.yaml  test_settings.json
ecs/include/ecs/: map.hpp
ecs/launch/: ecs.launch  ecs_nn.launch  test.launch
ecs/msg/: EnvValue.msg  SensorValue.msg  Sensors.msg
ecs/scripts/: centrist_node.py  change_detection_node.py  cjson.py  classification_classic.py  classification_classic_node.py  classification_torch_node.py  cpd.py  data_acquisition_node.py  detection.py  gist_node.py  sensor.py  switcher_api.py  switcher_node.py
ecs/src/: map.cpp  map_node.cpp
ecs/src/ecs/: centrist_node.py  classification_classic_node.py  classification_torch_node.py  cpd.py  data_acquisition_node.py  description.py  example_sensors_node.py  gist_node.py  robot_behavior_adaptation_node.py
ecs/srv/: Descriptor.srv  GetLayer.srv  GetLayers.srv
ecs/test/: cpd_tests.py
ecs_classification/: CMakeLists.txt  package.xml
ecs_core/: CMakeLists.txt  package.xml
ecs_core/include/ecs_core/: ecs.hpp
ecs_core/src/: ecs.cpp  ecs_node.cpp
ecs_detection/: CMakeLists.txt  package.xml
ecs_detection/include/ecs_detection/: EnvDetection.hpp  ecs_detection.hpp
ecs_detection/launch/: gmapping.launch
ecs_detection/src/: EnvDetection.cpp  ecs_detection.cpp  ecs_detection_node.cpp  env_detection_node.cpp
ecs_switcher/: CMakeLists.txt  package.xml
ecs_switcher/cfg/: test_settings.json
ecs_switcher/scripts/: cjson.py  switcher_api.py  switcher_node.py
