<?xml version="1.0"?>
<package format="2">
  <name>ecs</name>
  <version>0.2.0</version>
  <description>Environment Classification System package</description>
  <maintainer email="neduchal@kky.zcu.cz">Petr Neduchal</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/neduchal/ecs</url>
  <url type="bugtracker">http://github.com/neduchal/ecs/issues</url>
  <author email="neduchal@kky.zcu.cz">Petr Neduchal</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rosrospy</depend>  
  <depend>std_msgs</depend> 
  <depend>geometry_msgs</depend>   
  <depend>nav_msgs</depend>  
  <depend>tf</depend>  
  <build_depend>rostest</build_depend>
<!--  <depend>rosbag</depend>   -->
  <depend>cv_bridge</depend>  
  <depend>grid_map_core</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_cv</depend>
  <depend>grid_map_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>message_generation</depend>
  <exec_depend>message_runtime</exec_depend>
 <test_depend>rosunit</test_depend>  
</package>